# behcc

./: .gitmodules  CMakeLists.txt  README.md
behcc/: __init__.py  hash_encoder.py
cmake/: PatchOpenMPApple.cmake
include/: behcc.h  behcc.hpp  behcc_c.h  behcc_python.h
include/behcc/: behcc.h  common.h  hash_encoder.h  numpy.h
src/: CMakeLists.txt  behcc_python.cpp  bindings.cpp  hash_encoder.cpp
